--- a/index.html
+++ b/index.html
@@ -2,40 +2,46 @@
 <html lang="th">
 
 <head>
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>
-        Wedding of Yoke &amp; Pan
-    </title>
-    <link href="https://fonts.googleapis.com" rel="preconnect" />
-    <link crossorigin="" href="https://fonts.gstatic.com" rel="preconnect" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wedding of Yoke & Pan</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <!-- Font google -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Itim&amp;family=Julius+Sans+One&amp;family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&amp;family=Noto+Sans+Thai:wght@100..900&amp;display=swap"
-        rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&amp;family=Sail&amp;display=swap"
-        rel="stylesheet" />
+        href="https://fonts.googleapis.com/css2?family=Itim&family=Julius+Sans+One&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noto+Sans+Thai:wght@100..900&display=swap"
+        rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Sail&display=swap" rel="stylesheet">
     <!-- Bootstrap  -->
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <!-- Lightbox2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/css/lightbox.min.css" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/css/lightbox.min.css" rel="stylesheet">
+
+
     <!-- Css -->
-    <link href="css/style.css" rel="stylesheet" />
-    <link href="css/font.css" rel="stylesheet" />
-    <link href="css/animate.css" rel="stylesheet" />
-    <link href="css/animation.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/animation.css">
     <!--     <link rel="stylesheet" href="css/falling.css"> -->
-    <link href="css/event.css" rel="stylesheet" />
-    <link href="css/our.css" rel="stylesheet" />
-    <link href="css/skeleton.css" rel="stylesheet" />
-    <link href="css/owl.theme.default.min.css" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-        rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-        rel="stylesheet" />
+    <link rel="stylesheet" href="css/event.css">
+    <link rel="stylesheet" href="css/our.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+
+
+
 </head>
 
 <body>
@@ -78,8 +84,7 @@
             </i>
         </div>
     </nav>
-    <div class="falling-leaves">
-    </div>
+
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
@@ -122,7 +127,7 @@
                         </h2>
                     </div>
                     <div class="text-center">
-                        <h2 class="wow fadeIn slideInLeft" data-wow-delay=".4s">
+                        <h2 class="wow fadeInUp " data-wow-delay=".4s">
                             Sunday
                         </h2>
                         <br />
@@ -130,7 +135,7 @@
                             12 OCT 2025
                         </h4>
                         <br />
-                        <h4 class="wow fadeIn slideInRight" data-wow-delay=".6s">
+                        <h4 class="wow fadeInUp " data-wow-delay=".6s">
                             Please join us in celebrating our love and
                             marriage, countdown in&hellip;
                         </h4>
@@ -214,11 +219,11 @@
                         </p>
                     </div>
                 </div>
-                <h4 class="wow heart text-center pulse tada" data-wow-delay=".5s" data-wow-iteration="60">
+                <h4 class="wow heart text-center  tada" data-wow-delay=".5s" data-wow-iteration="60">
                     AND
                 </h4>
                 <div class="groom-wrap col-12 col-lg-6 wow fadeInRight" data-wow-delay=".3s">
-                    <div class="desc-bride">
+                    <div class="desc-bride wow slideInRight" data-wow-delay=".4s">
                         <h3>
                             Groom&rsquo;s Parent
                         </h3>
@@ -736,6 +741,7 @@
             });
         });
     </script>
+
     <script>
         // เพิ่มเอฟเฟกต์เมื่อ scroll มาถึง
         document.addEventListener('DOMContentLoaded', function () {
@@ -753,40 +759,35 @@
             items.forEach(item => observer.observe(item));
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/js/lightbox-plus-jquery.min.js">
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.5/dist/js/lightbox-plus-jquery.min.js"></script>
     <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js">
-    </script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Owl Carousel JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
-    </script>
-    <script src="js/falling.js">
-    </script>
-    <script src="js/wow.min.js">
-    </script>
-    <script crossorigin="anonymous" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js">
-        </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="js/falling.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
+        crossorigin="anonymous"></script>
     <script>
         new WOW().init();
     </script>
     <script>
         /* $(document).ready(function () {
-                 $('.owl-carousel').owlCarousel({
-                     loop: true,
-                     margin: 10,
-                     nav: true,
-                     dots: true,
-                     autoplay: true,
-                     autoplayTimeout: 3000,
-                     responsive: {
-                         0: { items: 1 },
-                         600: { items: 2 },
-                         1000: { items: 3 }
-                     }
-                 });
-             }); */
+            $('.owl-carousel').owlCarousel({
+                loop: true,
+                margin: 10,
+                nav: true,
+                dots: true,
+                autoplay: true,
+                autoplayTimeout: 3000,
+                responsive: {
+                    0: { items: 1 },
+                    600: { items: 2 },
+                    1000: { items: 3 }
+                }
+            });
+        }); */
         $(".gallery-loop").owlCarousel({
             loop: false, // ปิดการทำ loop ที่จะ clone รูป
             margin: 10,
@@ -827,6 +828,9 @@
             }
         });
     </script>
+
+
+
 </body>
 
 </html>
